--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background: url('images/pink\,\ chemistry\ aesthetic.jpg') center/ cover no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),url('images/pink\,\ chemistry\ aesthetic.jpg') center/ cover no-repeat;
 }
 
 header{
@@ -8,16 +8,89 @@ header{
     align-items: center;
     justify-content: flex-end;
     gap: 0.5rem;
+    position: relative;
 }
+
+
+#alert {
+    background-color: white;
+    position: fixed;
+    top: 10%;
+    left: 45%;
+    transform: translate(-30%, -45%);
+    width: 10rem;
+    margin: 0px auto;
+    text-align: center;
+    border-radius: 30px;
+    z-index: 100;
+    box-shadow: 7px 7px 7px rgba(0, 0, 0, 0.733);
+    display: none;
+}
+
+p{
+    padding: 0px;
+    margin: 5px;
+}
+
+#instructions {
+    background-color: white;
+    width: fit-content;
+    padding: 3px 5px;
+    margin: 0px auto;
+    border-radius: 20px;
+    text-align: center;
+    position: absolute;
+    z-index: 1000;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 50%;
+    animation: showThenHide 2s ease forwards;
+}
+
+ul {
+    width: fit-content;
+    margin: 9px auto;
+    text-align: left;
+
+}
+
+
+
+
+@keyframes showThenHide {
+    0% {
+        opacity: 0;
+        transform: translate(-50%, -60%);
+    }
+    15% {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
+    85% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 
 
 
 #input {
     border: 0px;
-    background-color: rgb(244, 244, 238);
     width: 100%;
     height: 100%;
     padding: 1rem;
+}
+
+.blur {
+    background-color: rgba(244, 244, 238, 0.4);
+    backdrop-filter: blur(10px);
+}
+
+.unblur{
+    background-color: rgba(244, 244, 238);
 }
 
 
